# advent_of_code

./: .gitignore  README.md  pyproject.toml
2020/day1/: day1.py
2021/day1/: day1.py
2021/day13/: part1.py
2021/day2/: day2.py  day2_part2.py
2021/day3/: part1.py  part2.py
2021/day4/: part1.py
2021/day5/: part1.py
2021/day6/: part1.py
2021/day7/: part1.py
2021/day8/: part1.py
2022/day1/: day1.py  openai.py
2022/day10/: part1.py  part2.py
2022/day11/: part1.py  part2.py
2022/day12/: part1.py  part2 optim.py  part2.py
2022/day13/: input_data.py  part1.py  part2.py
2022/day14/: part1.py  part2.py
2022/day15/: part1.py  part2.py
2022/day16/: part1.py
2022/day2/: day2.py  openai.py
2022/day3/: part1.py  part2.py
2022/day4/: part1.py  part2.py
2022/day5/: part1.py  part2.py
2022/day6/: part1.py  part2.py
2022/day7/: part1.py
2022/day8/: part1.py  part2.py
2022/day9/: part1.py  part2.py
2023/day1/: part1.py
2023/day10/: part1.py
2023/day2/: part1.py
2023/day3/: part1.py
2023/day4/: part1.py
2023/day5/: part1.py
2023/day6/: part1.py
2023/day7/: part1.py
2023/day8/: part1.py  part2.py
2023/day9/: part1.py
support/: support.py
