[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"
loguru = "^0.6.0"
z3-solver = "^4.11.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
